Fix alignment issues on card section

--- a/stylesheet.css
+++ b/stylesheet.css
@@ -101,7 +101,7 @@ h1 {
 }
 
 h2 {
-  font-size: 38px;
+  font-size: 28px;
   text-align: center;
   padding-top: 30px;
   padding-bottom: 15px;
@@ -133,13 +133,25 @@ button {
   margin-top: 10px;
 }
 
+.info-cards {
+  padding-bottom: 60px;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+}
+
 .card-description {
-  font-weight: 400;
+  font-weight: 300;
   font-size: 12px;
-  color: gray;
+  text-align: center;
+  color: #1f2937;
+  margin-left: 10px;
 }
 
 .card {
+  /* display: flex;
+  flex-direction: column;
+  align-items: center; */
   width: 100%;
   height: 100%;
   object-fit: cover;
@@ -155,7 +167,7 @@ button {
 
 .call-to-action {
   display: flex;
-  flex-direction: column;
+  flex-direction: row;
   margin: 80px;
   padding: 30px 80px;
   border-radius: 6px;
@@ -173,7 +185,6 @@ button {
   border: 2px solid white;
   border-radius: 4px;
   text-align: center;
-  width: 100px;
 }
 
 footer {
